--- a/src/components/activeMemberCard/ActiveMemberCard.css
+++ b/src/components/activeMemberCard/ActiveMemberCard.css
@@ -30,6 +30,7 @@
 .member-details{
     overflow: hidden ;
     min-height: 35px;
+    text-align: center;
 }
 .member-details span{
     color: var(--lightBlue);
@@ -39,6 +40,15 @@
 }
 
 
-@media (min-width : 768px) and (max-width : 991.8px) {
+@media (min-width : 992px) and (max-width : 1199.8px) {
+    .member-details button{
+        min-height: 45px;
+    }
+}
 
+@media (max-width : 576px)
+{
+    .member-details button{
+        min-height: 48px !important;
+    }
 }
