completes home page and makes it fully responsive

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -4,10 +4,12 @@
 button{
     all: unset;
 }
+
 .header-parent{
-    position: sticky;
+    position: fixed;
     top: 0;
     width: 100%;
+    z-index: 3;
 }
 .header-parent .header-inner .navbar .container-fluid{
     padding: 0 3%;
