--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,7 @@
   --lightPink : #f5cbd3;
   --yellow : #f1c40f;
   --green: #0abb87;
+  --open-sans :'Open Sans', sans-serif;
 }
 
 *{
@@ -27,7 +28,17 @@
 .custom-section-padding{
   padding: 6% 0;
 }
-
+.primary-btn{
+  background-color: var(--red);
+  padding: 16px 36px;
+  color: var(--white);
+  border-radius: 5px;
+  font-weight: 500;
+  transition: all 300ms ease;
+}
+.primary-btn:hover{
+  box-shadow: 0px 0px 0px 2px var(--red);
+}
 @media (min-width : 786px) and (max-width: 991.9px)
 {
   .custom-container{
@@ -39,6 +50,9 @@
 {
   .custom-container{
     padding: 0 15px;
+  }
+  .custom-section-padding{
+    padding: 50px 0;
   }
 }
 
