--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -36,6 +36,7 @@
     margin-bottom: 25px;
 }
 .footer-item ul li button {
+    font-weight: 600;
     margin: 3px 0;
     color: var(--lightPink);
     font-family: 'Open Sans', sans-serif;
