--- a/src/App.css
+++ b/src/App.css
@@ -8,10 +8,13 @@
   --red : #ea3d56;
   --sectionBg : #f6f6f6 ;
   --lightBlue : #6c7293;
-  --lightBlue2 : #48465b;
+  --lightBlue2 : #48465b; 
+  --lightblue3 : #4fc1e9;
   --lightPink : #f5cbd3;
   --yellow : #f1c40f;
   --green: #0abb87;
+
+
   --open-sans :'Open Sans', sans-serif;
 }
 
@@ -38,6 +41,11 @@
 }
 .primary-btn:hover{
   box-shadow: 0px 0px 0px 2px var(--red);
+}
+.center{
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 @media (min-width : 786px) and (max-width: 991.9px)
 {
