--- a/src/pages/memberDirectory/MemberDirectory.css
+++ b/src/pages/memberDirectory/MemberDirectory.css
@@ -12,7 +12,7 @@
     box-sizing: border-box;
 }
 .member-search-parent{
-    padding:  45px 2%;
+    padding:  55px 2% 30px 2%;
 }
 .member-search-inner{
     background-color: var(--white);
@@ -56,7 +56,7 @@
 .total-members-inner p{
     margin-bottom: 0;
     margin-left: 5px;
-    background-color: rgb(236, 235, 235);
+    background-color: #f0f3f4;
     color: var(--navBg);
     width: 25px;
     height: 25px;
@@ -67,14 +67,17 @@
     font-family: var(--open-sans);
 }
 .active-select{
-   background-color: var(--sectionBg);
+   background-color: #f0f3f4;
    color: var(--lightBlue2);
    border-radius: 4px;
-   padding: 10px 24px;
+   padding: 10px 17px;
    font-size: 13px;
    font-weight: 600;
    font-family: var(--open-sans);
    position: relative;
+}
+.active-select img{
+    margin-left: 10px;
 }
 .active-select::after{
     position: absolute;
@@ -95,7 +98,7 @@
     align-items: center;
 }
 .member-search-form input{
-    background-color: var(--sectionBg);
+    background-color: #f0f3f4;
     border: none;
     border-radius: 5px;
     padding: 10px 14px;
@@ -124,5 +127,53 @@
     height: 39px;
     border-radius: 5px;
     background-color: var(--sectionBg);
+    transition: all 250ms ease;
+    display: grid;
+    place-items: center;
+    position: relative;
+}
+.search-directory:hover::after{
+    opacity: 1;
+}
+.search-directory:hover::before{
+    opacity: 1;
+}
+.search-directory::after{
+    transition: all 200ms ease;
+    opacity: 0;
+    position: absolute;
+    display: block;
+    content: '';
+    width: 0; 
+    height: 0; 
+    border-left: 6px solid transparent;
+    border-right: 6px solid transparent;
+    border-top: 8px solid var(--lightBlue2);
+    top: -8px;
+      
+}
+.search-directory::before{
+    transition: all 200ms ease;
+    opacity: 0;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    content: 'Search Directory';
+    top: -35px;
+    width: 120px;
+    height: 27px;
+    border-radius: 16px;
+    background-color: var(--lightBlue2);
+    color: white;
+    font-size: 13px;
+}
+.search-directory img{
+    width: 14px;
+}
+.search-directory:hover{
+    cursor: pointer;
+    background-color: #f5cbd3;
+    box-shadow: 0px 0px 10px 6px rgba(129, 128, 128, 0.1);
 }
 /*MEMBER SEARCH    MEMBER SEARCH*/
